--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -79,7 +79,10 @@ jobs:
         run: cat coverage1.out | grep -v mock | grep -v proto | grep -v cmd | grep -v middleware | grep -v models > cover.out
       - name: Get total coverage
         id: total-coverage
-        run: echo "::set-output name=total-coverage::$(go tool cover -func cover.out)"
+        run:
+          OUTPUT = "$(go tool cover -func cover.out)"
+          echo $OUTPUT
+          echo "::set-output name=total-coverage::$OUTPUT"
 #      - name: Create badge
 #        run: |
 #          total=`go tool cover -func=cover.out | grep total | grep -Eo '[0-9]+\.[0-9]+'`
