--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -81,11 +81,10 @@ jobs:
         id: total-coverage
         run:
           OUTPUT=$(go tool cover -func cover.out)
-          $OUTPUT="${OUTPUT//'%'/'%25'}"
-          $OUTPUT="${OUTPUT//$'\n'/'%0A'}"
-          $OUTPUT="${OUTPUT//$'\r'/'%0D'}"
           echo $OUTPUT
-          echo "::set-output name=total-coverage::$OUTPUT"
+          echo "$OUTPUT<<EOF" >> $GITHUB_ENV
+          echo "$OUTPUT" >> $GITHUB_ENV
+          echo "EOF" >> $GITHUB_ENV
 #      - name: Create badge
 #        run: |
 #          total=`go tool cover -func=cover.out | grep total | grep -Eo '[0-9]+\.[0-9]+'`
@@ -113,7 +112,7 @@ jobs:
         uses: peter-evans/create-or-update-comment@v1
         with:
           issue-number: ${{ github.event.number }}
-          body: ${{ steps.total-coverage.outputs.total-coverage }}
+          body: ${{ env.OUTPUT }}
           reactions: eyes
 
 
