--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -79,12 +79,8 @@ jobs:
         run: cat coverage1.out | grep -v mock | grep -v proto | grep -v cmd | grep -v middleware | grep -v models > cover.out
       - name: Get total coverage
         id: total-coverage
-        run:
-          OUTPUT=$(go tool cover -func cover.out)
-          echo $OUTPUT
-          echo "$OUTPUT<<EOF" >> $GITHUB_ENV
-          echo "$OUTPUT" >> $GITHUB_ENV
-          echo "EOF" >> $GITHUB_ENV
+        run: go tool cover -func cover.out
+
 #      - name: Create badge
 #        run: |
 #          total=`go tool cover -func=cover.out | grep total | grep -Eo '[0-9]+\.[0-9]+'`
@@ -108,11 +104,19 @@ jobs:
 #
 #      - name: Create md file with cover
 #        run: cat cover.out > cover.md
+      - id: get-comment-body
+        run: |
+          body=$(cat cover.out)
+          body="${body//'%'/'%25'}"
+          body="${body//$'\n'/'%0A'}"
+          body="${body//$'\r'/'%0D'}"
+          echo ::set-output name=body::$body
+
       - name: Create comment
         uses: peter-evans/create-or-update-comment@v1
         with:
           issue-number: ${{ github.event.number }}
-          body: ${{ env.OUTPUT }}
+          body: ${{ steps.get-comment-body.outputs.body }}
           reactions: eyes
 
 
