--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -71,6 +71,7 @@ jobs:
 
       - name: Create badge
         run: |
+          echo $BRANCH_NAME
           total=`go tool cover -func=cover.out | grep total | grep -Eo '[0-9]+\.[0-9]+'`
           if (( $(echo "$total <= 40" | bc -l) )) ; then
             COLOR=red
