--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -108,10 +108,10 @@ jobs:
         with:
           issue-number: ${{ github.event.number }}
           body:
-            '```'bash
+            ``bash
 
             ${{ steps.get-comment-body.outputs.body }}
-            '```'
+            ``
             [![Coverage](https://duckluck-cov.hb.bizmrg.com/cover-test/tests.svg)](https://github.com/go-park-mail-ru/2021_1_DuckLuck/actions/workflows/docker-deploy.yml)
           reactions: eyes
 
