--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -108,11 +108,9 @@ jobs:
         with:
           issue-number: ${{ github.event.number }}
           body:
-            ``bash
-
             ${{ steps.get-comment-body.outputs.body }}
-            ``
-            [![Coverage](https://duckluck-cov.hb.bizmrg.com/cover-test/tests.svg)](https://github.com/go-park-mail-ru/2021_1_DuckLuck/actions/workflows/docker-deploy.yml)
+
+            [![Coverage](https://duckluck-cov.hb.bizmrg.com/$BRANCH_NAME/tests.svg)](https://github.com/go-park-mail-ru/2021_1_DuckLuck/actions/workflows/docker-deploy.yml)
           reactions: eyes
 
 
