--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -109,8 +109,7 @@ jobs:
           issue-number: ${{ github.event.number }}
           body:
 #            ${{ steps.get-comment-body.outputs.body }}
-            ${{ env.BRANCH_NAME }}
-            [![Coverage](https://duckluck-cov.hb.bizmrg.com//tests.svg)](https://github.com/go-park-mail-ru/2021_1_DuckLuck/actions/workflows/docker-deploy.yml)
+            [![Coverage](https://duckluck-cov.hb.bizmrg.com/${{ env.BRANCH_NAME }}/tests.svg)](https://github.com/go-park-mail-ru/2021_1_DuckLuck/actions/workflows/docker-deploy.yml)
           reactions: eyes
 
 
