--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -3,21 +3,21 @@ on: [push]
 jobs:
 
   build:
-    name: Build
+    name: Lint
     runs-on: ubuntu-latest
     steps:
 
-      - name: Set up Go 1.16
+      - name: Set up Go 1.15
         uses: actions/setup-go@v1
         with:
-          go-version: 1.16
+          go-version: 1.15
         id: go
 
       - name: Check out code into the Go module directory
         uses: actions/checkout@v1
 
       - name: Install golangci-lint
-        run: curl -sfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh| sh -s -- -b $(go env GOPATH)/bin v1.18.0
+        run: curl -sfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh| sh -s -- -b $(go env GOPATH)/bin v1.40.0
 
       - name: Run golangci-lint
         run: $(go env GOPATH)/bin/golangci-lint run
