OZON-128 Add cache

--- a/ansible/nginx/develop/files/duckluckbreakout.xyz.conf
+++ b/ansible/nginx/develop/files/duckluckbreakout.xyz.conf
@@ -15,11 +15,12 @@ server {
         ssl_certificate /etc/letsencrypt/live/duckluckbreakout.xyz/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/duckluckbreakout.xyz/privkey.pem;
 
-
         location / {
                 proxy_pass https://duckluckbreakout.hb.bizmrg.com/src/;
                 proxy_intercept_errors on;
                 proxy_redirect off;
+                expires 6M;
+                add_header Cache-Control public;
                 error_page 403 /index.html;
         }
 
@@ -68,11 +69,27 @@ server {
         }
 
         location /product {
+                expires 6M;
+                add_header Cache-Control public;
                 proxy_pass https://duckluckmarket.hb.bizmrg.com;
         }
 
-        location /favicon.ico {
-                proxy_pass https://duckluckmarket.hb.bizmrg.com/public/favicon.ico;
+        location /avatar {
+                expires 6M;
+                add_header Cache-Control public;
+                proxy_pass https://duckluckmarket.hb.bizmrg.com;
+        }
+
+        location /svg {
+                expires 6M;
+                add_header Cache-Control public;
+                proxy_pass https://duckluckmarket.hb.bizmrg.com;
+        }
+
+        location /public {
+                expires 6M;
+                add_header Cache-Control public;
+                proxy_pass https://duckluckmarket.hb.bizmrg.com;
         }
 
         location /api {
